<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".InformationActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_layout" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="2dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:srcCompat="@drawable/clock" />

    <TextView
        android:id="@+id/NameApplication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />


    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:text="@string/version"
        app:layout_constraintBottom_toBottomOf="@+id/author"
        app:layout_constraintStart_toStartOf="@+id/NameApplication" />

    <TextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"


        android:text="@string/author"
        android:textColor="?attr/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/NameApplication"

        app:layout_constraintTop_toBottomOf="@+id/NameApplication" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <TextView
            android:id="@+id/labelTextAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/apikey"
            android:textColor="?attr/colorPrimary"
            android:textSize="12sp"

            />

        <EditText
            android:id="@+id/editApiKey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:ems="17"
            android:inputType="text"
            android:textColor="@color/yellow"
            android:textSize="12sp"
            android:gravity="start"
            app:layout_constraintBottom_toBottomOf="@+id/labelApiKey"
            app:layout_constraintStart_toEndOf="@+id/labelApiKey" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonSaveApiKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        app:layout_constraintHorizontal_bias="0.01"
        android:text="@string/buttonTextSaveApiKey"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout4"
        app:layout_constraintTop_toTopOf="@+id/linearLayout4" />

    <TextView
        android:id="@+id/labelTextAboutApiKey"
        android:layout_width="326dp"
        android:layout_height="0dp"

        android:layout_marginTop="6dp"
        android:text="@string/labelTextAboutApiKey"
        android:textColor="?attr/colorPrimary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="@+id/version"
        app:layout_constraintTop_toBottomOf="@+id/author" />

    <LinearLayout

        android:id="@+id/linearLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/linearLayout4"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">


        <CheckBox
            android:id="@+id/checkBoxDefaultAPI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkBoxSetDefaultKey"
            android:textColor="?attr/colorPrimary" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>