<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateLocationActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_layout" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:layout_marginTop="2dp">

            <TextView
                android:id="@+id/locationName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/editLocationName"
                android:text="@string/add_location_name" />


            <EditText
                android:id="@+id/editLocationName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:autofillHints="Moscow, London, New York"
                android:inputType="text" />
            <Button
                android:id="@+id/buttonSearchLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/button_search_location_title" />
        </LinearLayout>
        <ListView
            android:id="@+id/list_locations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@color/reddivider"
            android:dividerHeight="@dimen/twodp"
            android:paddingTop="@dimen/app_bar_height"
            tools:layout_editor_absoluteX="0dp"
            android:clickable="true">

        </ListView>
        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:layout_marginTop="2dp">

            <TextView
                android:id="@+id/latitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latitude" />

            <EditText
                android:id="@+id/editLatitude"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:autofillHints="name"
                android:inputType="numberDecimal">


            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:layout_marginTop="2dp">

            <TextView
                android:id="@+id/longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longitude" />

            <EditText
                android:id="@+id/editLongitude"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:autofillHints="name"
                android:inputType="numberDecimal" />
        </LinearLayout>
        <Button
            android:id="@+id/buttonAddLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:text="@string/button_add_location_title" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>