<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/MainClock"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:fontFamily="casual"
                android:gravity="center"
                android:maxLines="1"
                android:scaleX="1.3"
                android:scaleY="1.3"
                android:text=""
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textColorHighlight="@color/white"
                android:textSize="96sp"
                android:visibility="visible"
                app:autoSizeTextType="uniform" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Loc" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="2dp"
            android:alpha="1"
            android:gravity="end"
            android:orientation="horizontal"
            android:overScrollMode="never"
            android:persistentDrawingCache="all">

            <ImageView
                android:id="@+id/weatherPic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="1dp"
                app:srcCompat="@drawable/icon01d"
                tools:srcCompat="@tools:sample/avatars" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/temperature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_weight="2"
                    android:background="@color/black"
                    android:clickable="false"
                    android:fontFamily="sans-serif-black"
                    android:maxLines="3"

                    android:minWidth="20sp"
                    android:text=""
                    android:textAlignment="gravity"
                    android:textColor="@color/white"
                    android:textSize="20sp"

                    />

                <TextView
                    android:id="@+id/wind"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_weight="2"
                    android:background="@color/black"
                    android:clickable="false"
                    android:fontFamily="sans-serif-black"
                    android:maxLines="3"

                    android:minWidth="20sp"
                    android:text=""
                    android:textAlignment="gravity"
                    android:textColor="@color/white"
                    android:textSize="20sp"

                    />

                <TextView
                    android:id="@+id/pressure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_weight="2"
                    android:background="@color/black"
                    android:clickable="false"
                    android:fontFamily="sans-serif-black"
                    android:maxLines="3"
                    android:minWidth="20sp"
                    android:text=""
                    android:textAlignment="gravity"
                    android:textColor="@color/white"
                    android:textSize="20sp"

                    />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="1"
            android:baselineAligned="false"
            android:gravity="top"
            android:orientation="horizontal"
            android:overScrollMode="never"
            android:persistentDrawingCache="all">

            <TextView
                android:id="@+id/weatherDescription"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/black"
                android:clickable="false"
                android:fontFamily="sans-serif"
                android:maxLines="1"
                android:paddingLeft="1sp"
                android:paddingBottom="5sp"
                android:singleLine="true"
                android:text=""
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/weatherCity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/black"
                android:clickable="false"
                android:fontFamily="sans-serif"
                android:maxLines="1"
                android:singleLine="true"
                android:text=""
                android:textAlignment="viewEnd"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="1"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:overScrollMode="never"
            android:persistentDrawingCache="all">

            <TextView
                android:id="@+id/day2"
                android:layout_width="12sp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="#009688"
                android:clickable="false"
                android:fontFamily="sans-serif-black"
                android:maxLines="1"
                android:minWidth="10sp"
                android:text="@string/monday"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/day3"
                android:layout_width="12sp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="#009688"
                android:clickable="false"
                android:fontFamily="sans-serif-black"
                android:maxLines="1"
                android:minWidth="10sp"
                android:text="@string/tuesday"
                android:textAlignment="center" />


            <TextView
                android:id="@+id/day4"
                android:layout_width="12sp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="#009688"
                android:clickable="false"
                android:fontFamily="sans-serif-black"
                android:maxLines="1"
                android:minWidth="10sp"
                android:text="@string/wednesday"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/day5"
                android:layout_width="12sp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="#009688"
                android:clickable="false"
                android:fontFamily="sans-serif-black"
                android:maxLines="1"
                android:minWidth="10sp"
                android:text="@string/thurday"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/day6"
                android:layout_width="12sp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="#009688"
                android:clickable="false"
                android:fontFamily="sans-serif-black"
                android:maxLines="1"
                android:minWidth="10sp"
                android:text="@string/friday"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/day7"
                android:layout_width="12sp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="#009688"
                android:clickable="false"
                android:fontFamily="sans-serif-black"
                android:maxLines="1"
                android:minWidth="10sp"
                android:text="@string/saturday"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/day1"
                android:layout_width="12sp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="#009688"
                android:clickable="false"
                android:fontFamily="sans-serif-black"
                android:maxLines="1"
                android:minWidth="10sp"
                android:text="@string/sunday"
                android:textAlignment="center" />


        </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/buttonInformation"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:background="@drawable/information"
        android:contentDescription="Information"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="@+id/linearLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>